tests/integration/errors/while_non_bool.rsg
// TEST: compile_error
// EXPECT-ERROR: condition must be 'bool'
module test_err

fn main() {
    while 42 {
    }
}
